Updated .lua files for ground stations, based on revised template.

--- a/GroundMags/Ground Station File Generator.ipynb
+++ b/GroundMags/Ground Station File Generator.ipynb
@@ -19,10 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "1725ade3-c073-426b-8d5d-07d5c483cdd5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pliny/.local/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -322,7 +330,7 @@
        "16    THEMIS         MIST  NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "c0777898-e86c-46de-9b8c-f37a451c9bad",
    "metadata": {},
    "outputs": [],
@@ -352,7 +360,7 @@
     "from luaparser import ast\n",
     "# from luaparser import astnodes\n",
     "\n",
-    "with open('template.lua', 'r') as file:\n",
+    "with open('template.asset', 'r') as file:\n",
     "    src = file.read()\n",
     "\n",
     "tree = ast.parse(src)\n",
@@ -377,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "c3d1d58f-566b-4f7f-b302-d123b0303996",
    "metadata": {},
    "outputs": [
