--- a/GroundMags/Magnetometer Sonification.ipynb
+++ b/GroundMags/Magnetometer Sonification.ipynb
@@ -220,12 +220,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://cdaweb.gsfc.nasa.gov/tmp/wsRSjvYw/THG_...</td>\n",
+       "      <td>https://cdaweb.gsfc.nasa.gov/tmp/ws4uR05X/THG_...</td>\n",
        "      <td>audio/wav</td>\n",
        "      <td>2023-04-19T00:00:00.000Z</td>\n",
        "      <td>2023-04-26T00:00:00.000Z</td>\n",
        "      <td>1209646</td>\n",
-       "      <td>2024-10-11T23:07:05.551Z</td>\n",
+       "      <td>2024-10-14T15:21:06.790Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -233,13 +233,13 @@
       ],
       "text/plain": [
        "                                                Name   MimeType  \\\n",
-       "0  https://cdaweb.gsfc.nasa.gov/tmp/wsRSjvYw/THG_...  audio/wav   \n",
+       "0  https://cdaweb.gsfc.nasa.gov/tmp/ws4uR05X/THG_...  audio/wav   \n",
        "\n",
        "                  StartTime                   EndTime   Length  \\\n",
        "0  2023-04-19T00:00:00.000Z  2023-04-26T00:00:00.000Z  1209646   \n",
        "\n",
        "               LastModified  \n",
-       "0  2024-10-11T23:07:05.551Z  "
+       "0  2024-10-14T15:21:06.790Z  "
       ]
      },
      "execution_count": 5,
@@ -326,7 +326,7 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"https://cdaweb.gsfc.nasa.gov/tmp/ws7BYa4f/THG_L2_MAG_PG0__000.gif\"/>"
+       "<img src=\"https://cdaweb.gsfc.nasa.gov/tmp/ws33aS4u/THG_L2_MAG_PG0__000.gif\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -380,15 +380,15 @@
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
-      "100% [..............................................................................] 20196 / 20196Saving gdh, Bx\n",
-      "100% [..............................................................................] 20196 / 20196Saving gdh, By\n",
-      "100% [..............................................................................] 20196 / 20196Saving gdh, Bz\n",
+      "100% [..............................................................................] 20208 / 20208Saving gdh, Bx\n",
+      "100% [..............................................................................] 20208 / 20208Saving gdh, By\n",
+      "100% [..............................................................................] 20208 / 20208Saving gdh, Bz\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
-      "100% [..............................................................................] 15326 / 15326Saving skt, Bx\n",
-      "100% [..............................................................................] 15326 / 15326Saving skt, By\n",
-      "100% [..............................................................................] 15326 / 15326Saving skt, Bz\n",
+      "100% [..............................................................................] 20208 / 20208Saving skt, Bx\n",
+      "100% [..............................................................................] 20208 / 20208Saving skt, By\n",
+      "100% [..............................................................................] 20208 / 20208Saving skt, Bz\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
       "xpath does not return any nodes or attributes. Be sure to specify in `xpath` the parent nodes of children and attributes to parse. If document uses namespaces denoted with xmlns, be sure to define namespaces and use them in xpath.\n",
@@ -404,9 +404,9 @@
       "100% [..........................................................................] 1209648 / 1209648Saving pg3, Bx\n",
       "100% [..........................................................................] 1209648 / 1209648Saving pg3, By\n",
       "100% [..........................................................................] 1209648 / 1209648Saving pg3, Bz\n",
-      "100% [............................................................................] 172846 / 172846Saving pg4, Bx\n",
-      "100% [............................................................................] 172846 / 172846Saving pg4, By\n",
-      "100% [............................................................................] 172846 / 172846Saving pg4, Bz\n",
+      "100% [..........................................................................] 1209648 / 1209648Saving pg4, Bx\n",
+      "100% [..........................................................................] 1209648 / 1209648Saving pg4, By\n",
+      "100% [..........................................................................] 1209648 / 1209648Saving pg4, Bz\n",
       "100% [..........................................................................] 1209648 / 1209648Saving pg5, Bx\n",
       "100% [..........................................................................] 1209648 / 1209648Saving pg5, By\n",
       "100% [..........................................................................] 1209648 / 1209648Saving pg5, Bz\n"
@@ -419,7 +419,7 @@
     "maglist = maglist_a+maglist_b\n",
     "\n",
     "# datestring = \"20230419T000000Z,20230426T000000Z\" # TODO: PULL THIS FROM DATETIMES\n",
-    "datestring = \"20240409T000000Z,20240416T000000Z\" # TODO: PULL THIS FROM DATETIMES\n",
+    "datestring = \"20240509T000000Z,20240516T000000Z\" # TODO: PULL THIS FROM DATETIMES\n",
     "\n",
     "\n",
     "for magname in maglist:\n",
@@ -462,20 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "a0466ba9-6d22-4f51-846f-90aad22fdd5c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% [............................................................................] 825422 / 825422\n",
-      "100% [............................................................................] 825416 / 825416\n",
-      "100% [........................................................................] 49252344 / 49252344\n",
-      "100% [........................................................................] 49252224 / 49252224\n",
-      "100% [........................................................................] 49252277 / 49252277\n",
-      "100% [........................................................................] 49252342 / 49252342\n"
+      "/home/pliny/.local/lib/python3.9/site-packages/magplots/magFunctions.py:362: DtypeWarning: Columns (1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(fname, parse_dates=[0])\n",
+      "/home/pliny/.local/lib/python3.9/site-packages/magplots/magFunctions.py:362: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  return pd.read_csv(fname, parse_dates=[0])\n"
      ]
     }
    ],
@@ -486,45 +484,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "afe5c4f2-edba-4fbe-adb1-171f2fe943f4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 2-dimensional, but 3 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m foo \u001b[38;5;241m=\u001b[39m fill_nan(ls_sigs)\n",
-      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/magplots/magFunctions.py:59\u001b[0m, in \u001b[0;36mfill_nan\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m     56\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mvstack((np\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(y)), np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;28mlen\u001b[39m(y))))\n\u001b[1;32m     58\u001b[0m \u001b[38;5;66;03m# Get the non-NaN values of X and y\u001b[39;00m\n\u001b[0;32m---> 59\u001b[0m x_fit \u001b[38;5;241m=\u001b[39m \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m~\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misnan\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     60\u001b[0m y_fit \u001b[38;5;241m=\u001b[39m y[\u001b[38;5;241m~\u001b[39mnp\u001b[38;5;241m.\u001b[39misnan(y)]\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     62\u001b[0m \u001b[38;5;66;03m# Estimate the coefficients of the linear regression\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;66;03m# beta = np.linalg.lstsq(X_fit.T, y_fit)[0]\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 2-dimensional, but 3 were indexed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# foo = fill_nan(ls_sigs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "3a7bbd30-1fed-4137-8d5c-433d38285e18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[41.58,   nan,   nan, ...,   nan,   nan,  5.35],\n",
-       "       [18.1 , 18.1 , 18.1 , ..., 16.1 , 16.1 , 16.1 ],\n",
-       "       [14.6 , 14.6 , 14.5 , ...,  7.2 ,  7.2 ,  7.2 ],\n",
-       "       [24.4 , 24.4 , 24.4 , ...,  5.  ,  4.9 ,  4.9 ],\n",
-       "       [  nan,   nan,   nan, ...,   nan,   nan,   nan],\n",
-       "       [61.9 ,   nan,   nan, ...,   nan,   nan,  9.  ]])"
+       "array(['GDH', '41.57999999999993', nan, ..., nan, nan,\n",
+       "       '5.350000000000364'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,17 +516,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4fb7663c-e738-4b90-98cc-fa7e31389c38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'foo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m foo\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'foo' is not defined"
+     ]
+    }
+   ],
    "source": [
     "foo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d2453f2b-83d8-4978-b360-ea36989d1ab6",
    "metadata": {},
    "outputs": [],
@@ -555,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "21716f35-81d0-4320-a081-f3b974617481",
    "metadata": {},
    "outputs": [],
@@ -574,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "98a5152a-521b-4042-a290-c4f3f47bef61",
    "metadata": {},
    "outputs": [],
@@ -658,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0e50b1e6-d138-456f-b23a-2706121bdd8f",
    "metadata": {},
    "outputs": [],
@@ -685,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c59c916e-9184-4426-a200-29ea2355ff33",
    "metadata": {},
    "outputs": [],
@@ -786,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "68cc1a05-3564-4689-8ac4-79e243d5fbc9",
    "metadata": {},
    "outputs": [],
@@ -813,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5f86b017-c199-4b72-85f4-5d81c6f430f2",
    "metadata": {},
    "outputs": [],
